# munk

./: .gitignore  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  todo.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: test.yml
docs/: CHUNKING_STRATEGIES_REVIEW.md
instructions/: munk_v0.1_build_order.md  munk_v0.1_implementation.md  munk_v0.1_spec.md
munk/: assembler.py  chunker.py  chunker_config.py  contextual_enrichment.py  create_test_data.py  editor.py  enrich_and_test.py  hashing.py  hierarchical_rag.py  ids.py  locker.py  models.py  store.py  validator.py
munk/adapters/: chunk_history_adapter.py  chunk_store_adapter.py  contextual_enrichment_adapter.py  lock_adapter.py  source_chunk_adapter.py
munk/api/: health.py  routes.py
munk/chunkers/: semantic_chunker.py
tests/: test_api.py  test_assembler.py  test_chunk_history_adapter.py  test_chunk_store_adapter.py  test_chunker.py  test_chunker_with_conversations.py  test_contextual_enrichment_adapter.py  test_editor.py  test_hashing.py  test_lock_adapter.py  test_locker.py  test_models.py  test_store.py  test_validator.py
tui/: app.py
web/: index.html
