[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "munk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "textual>=0.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",       # required for FastAPI test client
    "pytest-cov>=5.0",
]

[project.scripts]
munk-api = "munk.api.routes:app"
munk-tui = "tui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["munk*"]

[tool.coverage.run]
source = ["munk"]

[tool.coverage.report]
fail_under = 80
omit = [
    "munk/api/routes.py",
    "munk/tui/*",
    "munk/contextual_enrichment.py",
    "munk/hierarchical_rag.py",
    "munk/enrich_and_test.py",
    "munk/create_test_data.py",
]
